<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0">

        <LinearLayout
            android:id="@+id/LinearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/LinearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="0"
                    android:fontFamily="@font/advent_pro_semibold"
                    android:gravity="left"
                    android:text="@string/text1"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/shema1"
                    tools:srcCompat="@drawable/shema1" />

                <RadioGroup
                    android:id="@+id/rGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/OneSv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:checked="true"
                        android:clickable="true"
                        android:text="@string/one" />

                    <RadioButton
                        android:id="@+id/PosSoed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:clickable="true"
                        android:text="@string/Pos" />

                    <RadioButton
                        android:id="@+id/ParSoed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:clickable="true"
                        android:text="@string/par" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/LinearLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"

                        android:layout_weight="0"
                        android:text="@string/text2"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="240dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_weight="0"
                            android:text="@string/nap"
                            android:textColor="@color/primaryTextColor" />

                        <EditText
                            android:id="@+id/Nap"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:ems="10"
                            android:gravity="right"
                            android:inputType="numberDecimal"
                            android:selectAllOnFocus="true"
                            android:text="220" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginEnd="4dp"
                            android:layout_weight="0"
                            android:text="@string/v1"
                            android:textColor="@color/primaryTextColor" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="240dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_weight="0"
                            android:text="@string/naps"
                            android:textColor="@color/primaryTextColor" />

                        <EditText
                            android:id="@+id/NapSv"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:ems="10"
                            android:gravity="right"
                            android:inputType="numberDecimal"
                            android:selectAllOnFocus="true"
                            android:text="3" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginEnd="4dp"
                            android:layout_weight="0"
                            android:text="@string/v2"
                            android:textColor="@color/primaryTextColor" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="240dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_weight="0"
                            android:text="@string/tok"
                            android:textColor="@color/primaryTextColor" />

                        <EditText
                            android:id="@+id/Tok"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:ems="10"
                            android:gravity="end"
                            android:inputType="numberDecimal"
                            android:selectAllOnFocus="true"
                            android:text="15"
                            tools:ignore="RtlHardcoded" />

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginEnd="12dp"
                            android:layout_weight="0"
                            android:text="@string/mA"
                            android:textColor="@color/primaryTextColor" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/LN8"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:orientation="horizontal"
                        android:visibility="gone"
                        tools:visibility="visible">

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="240dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_weight="0"
                            android:text="@string/kls"
                            android:textColor="@color/primaryTextColor" />

                        <EditText
                            android:id="@+id/KolSv"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:ems="10"
                            android:gravity="right"
                            android:inputType="numberSigned"
                            android:text="1" />

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginEnd="12dp"
                            android:layout_weight="0"
                            android:text="@string/kl"
                            android:textColor="@color/primaryTextColor" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout6"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="0"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/calculate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:gravity="center"
                    android:text="@string/btntext1"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>